<resources>
    <string name="app_name">math</string>
    <string name="Home">Home</string>
    <string name="more">more</string>
    <string name="setting">setting</string>
    <string name="plus_ou_moins">superieur ou inferieur</string>
    <string name="horloge">horloge</string>
    <string name="plus">plus</string>
    <string name="moins">moins</string>
    <string name="home">home</string>
    <string name="top_app_bar">top_app_bar</string>
    <string name="operation">operation</string>
    <string name="egale_ou_deferent">egale_ou_deferent</string>
    <string name="contact_us">contact_us</string>
    <string name="navigation_up">navigation_up</string>
    <string name="fois">fois\'*\'</string>
    <string name="division">division\' / \'</string>
    <string name="somme">somme\'+\'</string>
    <string name="soustraction">soustraction\'-\'</string>
    <string name="more_apps">more apps</string>
    <string name="about_us">About us</string>
    <string name="math">math app</string>
    <string name="verified">verified</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="settings">settings</string>
    <string name="devision">devision</string>
    <string name="user_info">user info</string>
    <string name="Fois">FOIS</string>
    <string name="SETTINGS">SETTINGS</string>
    <string name="USER_INFORMATIONS">HOME</string>
    <string name="SOMME">SOMME</string>
    <string name="SOUSTRACTION">SOUSTRACTION</string>
    <string name="CANTACT_US">CANTACT US</string>
    <string name="EGALE_OU_DEFERENT">EGALE OU DEFERENT</string>
    <string name="SUPERIEUR_OU_INFERIEUR">SUPERIEUR OU INFERIEUR</string>
    <string name="calcul">calcul</string>
    <string name="login">login</string>
    <string name="password">password</string>
    <string name="MATH">MATH</string>
    <string name="register">Register</string>
    <string name="full_name">full name</string>
    <string name="email">email</string>
    <string name="confirm_password">confirm password</string>
    <string name="Class">Class</string>
    <string name="save">Save</string>
    <string name="already_have_account">Already have account</string>
    <string name="first_name">first name</string>
    <string name="second_name">second name</string>
    <string name="creat_account">creat account</string>
    <string name="forget_password">forget password?</string>
    <string name="create_account">create_account</string>
    <string name="check_your_email_to_verify_it">check your email to verify it!</string>
    <string name="genie">Genie</string>
    <string name="facebook_app_id">876049090383180</string>
    <string name="fb_login_protocol_scheme">fb1234</string>
    <string name="facebook_client_token">56789</string>
    <string name="light_mode">Light Mode</string>
    <string name="dark_mode">Dark_mode</string>
    <string name="new_todo">new task</string>
    <string name="add">add</string>
    <string name="starte">★</string>
    <string name="remove">remove</string>
    <string name="change">change</string>
    <string name="tasks_group">tasks_group</string>
    <string name="add_task">add task</string>
    <string name="task_notes">Task Notes</string>
    <string name="add_new_task">Add New Task</string>
    <string name="mark_as_done">Mark as Done</string>
    <string name="contact_support">contact support</string>
</resources>