<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    app:startDestination="@id/home">

    <fragment
        android:id="@+id/home"
        android:name="com.example.math.Home"
        android:label="@string/USER_INFORMATIONS"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_home_to_somme"
            app:destination="@id/somme" />
    </fragment>

    <fragment
        android:id="@+id/setting"
        android:name="com.example.math.setting"
        android:label="@string/SETTINGS"
        tools:layout="@layout/fragment_settings" />
    <fragment
        android:id="@+id/tasks_group"
        android:name="com.example.math.tasks_group"
        android:label="@string/tasks_group"
        tools:layout="@layout/fragment_tasks_group" />
    <fragment
        android:id="@+id/somme"
        android:name="com.example.math.add_task"
        android:label="@string/SOMME"
        tools:layout="@layout/fragment_add_task" >
        <action
            android:id="@+id/action_somme_to_home"
            app:destination="@id/home" />
    </fragment>
    <fragment
        android:id="@+id/soustraction"
        android:name="com.example.math.user_info"
        android:label="@string/SOUSTRACTION"
        tools:layout="@layout/fragment_user_info" />
    <fragment
        android:id="@+id/cantact"
        android:name="com.example.math.contact_us"
        android:label="@string/CANTACT_US"
        tools:layout="@layout/fragment_contact_us" />

</navigation>